--- a/MyBlog.App/Views/Home/Privacy.cshtml
+++ b/MyBlog.App/Views/Home/Privacy.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Политика конфиденциальности";
 }
 <h3 class="mt-5">@ViewData["Title"]</h3>
 
