--- a/MyBlog.App/wwwroot/css/site.css
+++ b/MyBlog.App/wwwroot/css/site.css
@@ -97,12 +97,15 @@ body {
     border-color: var(--bs-primary);
 }
 
-.tag-badge {
+.tag-badge, .email-badge {
     background: var(--bs-blue);
     margin: 0 1px;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
 }
-    .tag-badge:hover {
+.email-badge {
+    background: rgba(var(--bs-success-rgb));
+}
+    .tag-badge:hover, .email-badge:hover {
         background: var(--bs-gray-600);
         cursor: pointer;
         transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
