--- a/MyBlog.App/Views/Tag/View.cshtml
+++ b/MyBlog.App/Views/Tag/View.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyBlog.Services.ViewModels.Tags.Request.TagViewModel
 @{
-    ViewData["Title"] = "Роль";
+    ViewData["Title"] = "Тег";
 }
 
 <div class="m-auto max-width-450">
