--- a/MyBlog.App/Views/User/Create.cshtml
+++ b/MyBlog.App/Views/User/Create.cshtml
@@ -7,6 +7,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 
+<script>
+    window.addEventListener('load',() => resetDataInDateInput());
+</script>
+
 <div class="max-width-550 m-auto mb-5">
     <form class="mt-5" method="post" asp-controller="User" asp-action="Create">
         <h3>Создание пользователя</h3>
