Добавлено промежуточное ПО для логирования действий пользователя и обработки ошибок

--- a/MyBlog.App/Views/Shared/_Layout.cshtml
+++ b/MyBlog.App/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         </main>
     </div>
 
-    <environment include="Development">
+    @*<environment include="Development">
         <details>
             <summary>Claim</summary>
             @if (User.Identity.IsAuthenticated)
@@ -41,7 +41,7 @@
             }
         </details>
         <a asp-action="Bad" asp-controller="Home">ERROR</a>
-    </environment>
+    </environment>*@
 
     <footer class="border-top footer bg-dark text-muted">
         <div class="container">
