--- a/MyBlog.App/Views/Shared/_Layout.cshtml
+++ b/MyBlog.App/Views/Shared/_Layout.cshtml
@@ -29,19 +29,7 @@
         </main>
     </div>
 
-    @*<environment include="Development">
-        <details>
-            <summary>Claim</summary>
-            @if (User.Identity.IsAuthenticated)
-            {
-                foreach (var claim in User.Claims)
-                {
-                    <p>@($"{claim.Type} - {claim.Value}")</p>
-                }
-            }
-        </details>
-        <a asp-action="Bad" asp-controller="Home">ERROR</a>
-    </environment>*@
+    @*<partial name="_Develop" />*@
 
     <footer class="border-top footer bg-dark text-muted">
         <div class="container">
