--- a/MyBlog.App/Views/Tag/View.cshtml
+++ b/MyBlog.App/Views/Tag/View.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="m-auto max-width-450">
-    <h3 mt-5>Просмотр тега</h3>
+    <h3 class="mt-5">Просмотр тега</h3>
     <hr class="hr" />
     <div class="card border-muted shadow-lg h-75">
         <div class="card-body">
