--- a/MyBlog.App/Views/Comment/Edit.cshtml
+++ b/MyBlog.App/Views/Comment/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Comments.Response.CommentEditViewModel
+﻿@model MyBlog.Services.ViewModels.Comments.Request.CommentEditViewModel
 @{
     ViewData["Title"] = "Редактирование комментария";
 
