--- a/MyBlog.App/Views/Comment/GetComments.cshtml
+++ b/MyBlog.App/Views/Comment/GetComments.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Comments.Request.CommentsViewModel
+﻿@model MyBlog.Services.ViewModels.Comments.Response.CommentsViewModel
 @{
     ViewData["Title"] = "Список комментариев";
 
