--- a/MyBlog.App/Views/Post/Create.cshtml
+++ b/MyBlog.App/Views/Post/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Posts.Response.PostCreateViewModel
+﻿@model MyBlog.Services.ViewModels.Posts.Request.PostCreateViewModel
 @{
     ViewData["Title"] = "Создание статьи";
 }
