--- a/MyBlog.App/Views/Post/Edit.cshtml
+++ b/MyBlog.App/Views/Post/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Posts.Response.PostEditViewModel
+﻿@model MyBlog.Services.ViewModels.Posts.Request.PostEditViewModel
 @{
     ViewData["Title"] = "Редактирование статьи";
 
