--- a/MyBlog.App/Views/Post/GetPosts.cshtml
+++ b/MyBlog.App/Views/Post/GetPosts.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Posts.Request.PostsViewModel
+﻿@model MyBlog.Services.ViewModels.Posts.Response.PostsViewModel
 @{
     ViewData["Title"] = "Список статей";
 
