--- a/MyBlog.App/Views/Role/Create.cshtml
+++ b/MyBlog.App/Views/Role/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Roles.Response.RoleCreateViewModel
+﻿@model MyBlog.Services.ViewModels.Roles.Request.RoleCreateViewModel
 @{
     ViewData["Title"] = "Создание роли";
 }
