--- a/MyBlog.App/Views/Role/Edit.cshtml
+++ b/MyBlog.App/Views/Role/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Roles.Response.RoleEditViewModel
+﻿@model MyBlog.Services.ViewModels.Roles.Request.RoleEditViewModel
 @{
     ViewData["Title"] = "Редактирование роли";
 
