--- a/MyBlog.App/Views/Role/View.cshtml
+++ b/MyBlog.App/Views/Role/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Roles.Request.RoleViewModel
+﻿@model MyBlog.Services.ViewModels.Roles.Response.RoleViewModel
 @{
     ViewData["Title"] = "Роль";
 
