--- a/MyBlog.App/Views/Tag/View.cshtml
+++ b/MyBlog.App/Views/Tag/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Tags.Request.TagViewModel
+﻿@model MyBlog.Services.ViewModels.Tags.Response.TagViewModel
 @{
     ViewData["Title"] = "Тег";
 }
