--- a/MyBlog.App/Views/User/Create.cshtml
+++ b/MyBlog.App/Views/User/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Users.Response.UserCreateViewModel
+﻿@model MyBlog.Services.ViewModels.Users.Request.UserCreateViewModel
 @{
     ViewData["Title"] = "Создание пользователя"; 
 }
