--- a/MyBlog.App/Views/User/Edit.cshtml
+++ b/MyBlog.App/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Users.Response.UserEditViewModel
+﻿@model MyBlog.Services.ViewModels.Users.Request.UserEditViewModel
 @{
     ViewData["Title"] = "Редактирование пользователя";
 
