--- a/MyBlog.App/Views/User/Login.cshtml
+++ b/MyBlog.App/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Users.Response.UserLoginViewModel
+﻿@model MyBlog.Services.ViewModels.Users.Request.UserLoginViewModel
 @{
     ViewData["Title"] = "Авторизация";
 
