--- a/MyBlog.App/Views/User/Register.cshtml
+++ b/MyBlog.App/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Users.Response.UserRegisterViewModel
+﻿@model MyBlog.Services.ViewModels.Users.Request.UserRegisterViewModel
 @{
     ViewData["Title"] = "Регистрация"; 
 }
