--- a/MyBlog.App/Views/Post/View.cshtml
+++ b/MyBlog.App/Views/Post/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Posts.Request.PostViewModel
+﻿@model MyBlog.Services.ViewModels.Posts.Response.PostViewModel
 @{
     ViewData["Title"] = "Статья";
 
