--- a/MyBlog.App/Views/Role/GetRoles.cshtml
+++ b/MyBlog.App/Views/Role/GetRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Roles.Request.RolesViewModel
+﻿@model MyBlog.Services.ViewModels.Roles.Response.RolesViewModel
 @{
     ViewData["Title"] = "Роли";
 }
