--- a/MyBlog.App/Views/Tag/GetTags.cshtml
+++ b/MyBlog.App/Views/Tag/GetTags.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.Services.ViewModels.Tags.Request.TagsViewModel
+﻿@model MyBlog.Services.ViewModels.Tags.Response.TagsViewModel
 @{
     ViewData["Title"] = "Список тегов";
     var check = User.IsInRole("Admin") || User.IsInRole("Moderator");
